--- a/campaings.html
+++ b/campaings.html
@@ -52,35 +52,85 @@
         />
       </div>
     </header>
-    <div class="container">
-      <div class="sidebar">
-        <a class="active" href="dashboard.html"
-          ><i class="bi bi-house-door"></i>Dashboard</a
-        >
-        <h2 class="sidebar-h2">ANALYTICS</h2>
-        <a href="metricts.html"
-          ><img src="Saf Icons/Analysis.svg" alt="" />Metrics</a
-        >
-        <a href="campaings.html"
-          ><img src="Saf Icons/Engagemnet.svg" alt="" />Campaigns</a
-        >
-        <a href="insights.html"
-          ><img src="Saf Icons/Monetisation.svg" alt="" />insights</a
-        >
-        <a href="insights.html"
-          ><img src="Saf Icons/Retention.svg" alt="" />Integration</a
-        >
-        <a href="insights.html"
-          ><img src="Saf Icons/Reports.svg" alt="" />Reports</a
-        >
-        <a href="insights.html"
-          ><img src="Saf Icons/Reports (1).svg" alt="" />competitor Analysis</a
-        >
-        <h2 class="sidebar-h2">USER</h2>
-        <a href=""
-          ><img src="Saf Icons/Demographics.svg" alt="" />Demograhics</a
-        >
-      </div>
+
+    <div class="sidebar">
+      <img src="Assets/images/SAF-MAIN-LOGO.png" alt="" class="sidebar-image" />
+      <a class="active" href="dashboard.html"
+        ><i class="bi bi-house-door"></i>Dashboard</a
+      >
+      <h2 class="sidebar-h2">ANALYTICS</h2>
+      <a href="metricts.html"
+        ><img src="Saf Icons/Analysis.svg" alt="" />Metrics</a
+      >
+      <a href="campaings.html"
+        ><img src="Saf Icons/Engagemnet.svg" alt="" />Campaigns</a
+      >
+      <a href="insights.html"
+        ><img src="Saf Icons/Monetisation.svg" alt="" />insights</a
+      >
+      <a href="insights.html"
+        ><img src="Saf Icons/Retention.svg" alt="" />Integration</a
+      >
+      <a href="insights.html"
+        ><img src="Saf Icons/Reports.svg" alt="" />Reports</a
+      >
+      <a href="insights.html"
+        ><img src="Saf Icons/Reports (1).svg" alt="" />competitor Analysis</a
+      >
+      <h2 class="sidebar-h2">USER</h2>
+      <a href=""><img src="Saf Icons/Demographics.svg" alt="" />Demograhics</a>
     </div>
+
+    <main class="main-content">
+      <div>
+        <h2 class="h2">
+          <span>Hey Amina</span> - here's what's happening with your site today
+        </h2>
+      </div>
+
+      <h3 class="h3">Social Media Overview</h3>
+
+      <div class="grid-container">
+        <div class="grid-item">
+          <ul>
+            <li>Tiktok</li>
+            <li><span>420k</span> followers</li>
+            <li>
+              <p>12%</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="grid-item">
+          <ul>
+            <li>Instagram</li>
+            <li><span>980k</span> followers</li>
+            <li>
+              <p>20%</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="grid-item">
+          <ul>
+            <li>Youtube</li>
+            <li><span>230k</span> Subscribers</li>
+            <li>
+              <p>53%</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="grid-item">
+          <ul>
+            <li>X</li>
+            <li><span>670k</span> Subscribers</li>
+            <li>
+              <p>25%</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
