--- a/dashboard.html
+++ b/dashboard.html
@@ -54,6 +54,7 @@
     </header>
 
     <div class="sidebar">
+      <img src="Assets/images/SAF-MAIN-LOGO.png" alt="" class="sidebar-image" />
       <a class="active" href="dashboard.html"
         ><i class="bi bi-house-door"></i>Dashboard</a
       >
@@ -105,7 +106,7 @@
           <ul>
             <li>clicks</li>
             <li><span>2.32M</span></li>
-            <li>
+            <li class="percentage">
               <i class="bi bi-arrow-up"></i>6%
               <p>Increase From target</p>
             </li>
@@ -149,8 +150,9 @@
           <ul>
             <li>Total Spending</li>
             <li><span>KES 2.75M</span></li>
-            <li>
-              <i class="bi bi-arrow-up"></i>5%
+            <li class="percentage">
+              <i class="bi bi-arrow-up"></i>
+              5%
               <p>Increase From Target</p>
             </li>
           </ul>
@@ -160,8 +162,8 @@
           <ul>
             <li>ROI</li>
             <li><span>KES 670K</span></li>
-            <li>
-              <i class="bi bi-arrow-up"></i>6%
+            <li class="percentage">
+              <i class="bi bi-arrow-up"></i> 6%
               <p>Increase From Target</p>
             </li>
           </ul>
@@ -191,16 +193,20 @@
             <li><span>KES 670K</span></li>
             <li>
               <i class="bi bi-arrow-up"></i>12%
-              <p>Increase Fron Target</p>
+              <p>Increase From Target</p>
             </li>
           </ul>
         </div>
 
         <div class="grid-item">
-          <h3>Organic Vs Paid</h3>
-          <div id="organicVsPaidChartContainer">
-            <canvas id="organicVsPaidChart"></canvas>
-          </div>
+          <ul>
+            <li>Organic Vs Paid</li>
+            <li id="organicVsPaidChartContainer">
+              <span>
+                <canvas id="organicVsPaidChart"></canvas>
+              </span>
+            </li>
+          </ul>
         </div>
 
         <div class="grid-item">
@@ -211,13 +217,95 @@
           </ul>
         </div>
       </div>
-    </main>
+      <h2 class="h2">where do your users visiting from?</h2>
 
-    <div class="additional-content">
-      <h2 class="h2">
-        <span> Hey Amina</span> - here's what's happening with your site today
-      </h2>
-    </div>
+      
+        <div class="grid-container2">
+          <div class="grid1">
+            <h2 id="user-traffic-heading">User Traffic</h2>
+<span id="user-traffic-number">251,000</span>
+<p id="user-traffic-description">users per day</p>
+
+            <div class="simple-bar-chart">
+              <div class="item" style="--clr: #049539; --val: 80">
+                <div class="label"></div>
+                <div class="value">80%</div>
+              </div>
+
+              <div class="item" style="--clr: #049539; --val: 50">
+                <div class="label"></div>
+                <div class="value">50%</div>
+              </div>
+
+              <div class="item" style="--clr: #049539; --val: 100">
+                <div class="label"></div>
+                <div class="value">100%</div>
+              </div>
+
+              <div class="item" style="--clr: #049539; --val: 15">
+                <div class="label"></div>
+                <div class="value">15%</div>
+              </div>
+
+              <div class="item" style="--clr: #049539; --val: 1">
+                <div class="label"></div>
+                <div class="value">1%</div>
+              </div>
+
+              <div class="item" style="--clr: #049539; --val: 90">
+                <div class="label"></div>
+                <div class="value">90%</div>
+              </div>
+            </div>
+
+            <div id="userTrafficChartContainer">
+              <canvas id="userTrafficChart"></canvas>
+            </div>
+            <!-- Top counties and users -->
+            <p>Kajiado --------- 9,875</p>
+            <hr>
+            <p>Kajiado --------- 9,875</p>
+            <hr>
+            <p>Kajiado --------- 9,875</p>
+            <hr>
+            <p>Kajiado --------- 9,875</p>
+            <hr>
+            <p>Kajiado --------- 9,875</p>
+            <hr>
+            <p>Nairobi - 8,532</p>
+            <hr>
+            <a href="#" class="real-time-link"
+              >View real time <i class="bi bi-arrow-left"></i
+            ></a>
+          </div>
+
+          <div class="grid2 additional-content">
+            <h2 class="h2">Likes by Cities</h2>
+            <!-- Display likes by cities -->
+            <ul>
+              <li>Nairobi - 15,327 likes (42%)</li>
+              <li>Mombasa - 10,456 likes (28%)</li>
+              <!-- Add more cities as needed -->
+            </ul>
+            <!-- Link to view real-time data -->
+            <a href="#" class="real-time-link"
+              >View real time <i class="bi bi-arrow-left"></i
+            ></a>
+          </div>
+
+          <div class="grid3 additional-content">
+            <h2 class="h2">Automated Insights</h2>
+            <!-- Display automated insights -->
+            <p>Insight 1: Increase in user engagement observed on weekends.</p>
+            <p>
+              Insight 2: Campaign X resulted in a significant boost in
+              conversions.
+            </p>
+            <!-- Add more insights as needed -->
+          </div>
+        </div>
+      </div>
+    </main>
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
