--- a/dashboard.html
+++ b/dashboard.html
@@ -211,112 +211,162 @@
 
         <div class="grid-item">
           <ul>
-            <li>Male Vs Paid</li>
-            <p>50</p>
-            <p>50</p>
+            <li>Male Vs Female</li>
+            <p
+              class="p1 male"
+              style="flex: 1; padding: 10px; background-color: #00bfff"
+            >
+              50%
+            </p>
+            <p
+              class="p1 female"
+              style="
+                flex: 1;
+                padding: 10px;
+                margin-right: 1px;
+                background-color: #ef2aa0;
+              "
+            >
+              50%
+            </p>
           </ul>
         </div>
       </div>
       <h2 class="h2">Where do your Users visiting from?</h2>
 
-      
-        <div class="grid-container2">
-          <div class="grid1">
-            <h2 id="user-traffic-heading">User Traffic</h2>
-               <span id="user-traffic-number">251,000</span>
-              <p id="user-traffic-description">users per day</p>
+      <div class="grid-container2">
+        <div class="grid1">
+          <h2 id="user-traffic-heading" style="font-size: 1.5em">
+            User Traffic
+          </h2>
+          <span id="user-traffic-number">251,000</span>
+          <p id="user-traffic-description">users per day</p>
 
-            <div class="simple-bar-chart">
-              <div class="item" style="--clr: #049539; --val: 80">
-                <div class="label"></div>
-                <div class="value">80%</div>
-              </div>
+          <div class="simple-bar-chart">
+            <div class="item" style="--clr: #049539; --val: 80"></div>
 
-              <div class="item" style="--clr: #049539; --val: 50">
-                <div class="label"></div>
-                <div class="value">50%</div>
-              </div>
+            <div class="item" style="--clr: #049539; --val: 50"></div>
 
-              <div class="item" style="--clr: #049539; --val: 100">
-                <div class="label"></div>
-                <div class="value">100%</div>
-              </div>
+            <div class="item" style="--clr: #049539; --val: 100"></div>
 
-              <div class="item" style="--clr: #049539; --val: 15">
-                <div class="label"></div>
-                <div class="value">15%</div>
-              </div>
+            <div class="item" style="--clr: #049539; --val: 25"></div>
 
-              <div class="item" style="--clr: #049539; --val: 1">
-                <div class="label"></div>
-                <div class="value">1%</div>
-              </div>
+            <div class="item" style="--clr: #049539; --val: 20"></div>
 
-              <div class="item" style="--clr: #049539; --val: 90">
-                <div class="label"></div>
-                <div class="value">90%</div>
-              </div>
-            </div>
+            <div class="item" style="--clr: #049539; --val: 90"></div>
 
-            <div id="userTrafficChartContainer">
-              <canvas id="userTrafficChart"></canvas>
-            </div>
-            <a href="#" class="real-time-link"
-              >View real time <i class="bi bi-arrow-left"></i
-            ></a>
+            <div class="item" style="--clr: #049539; --val: 50"></div>
           </div>
-
-          <div class="grid2">
-          <h2 id="user-traffic-heading">Likes by Cities</h2>
-          <p style="color: black; padding: 10px; font-weight: bold; font-size: 14px;">Page Likes by City</p>
-    <table>
-        <tr>
-            <th>City</th>
-            <th>Likes</th>
-            <th>Likes %</th>
-        </tr>
-        <tr>
-            <td>Nairobi</td>
-            <td>1.4K</td>
-            <td>37.33%%</td>
-        </tr>
-        <tr>
-            <td>Kisumu</td>
-            <td>659</td>
-            <td>17.38%</td>
-        </tr>
-        <tr>
-            <td>Kakamega</td>
-            <td>172</td>
-            <td>4.53%</td>
-        </tr>
-        <tr>
-            <td>Mombasa</td>
-            <td>156</td>
-            <td>32.45%</td>
-        </tr>
-        <tr>
-            <td style="color: #3b5fa1;">Other</td>
-            <td style="color: #3b5fa1;">1.2k</td>
-            <td style="color: #3b5fa1;">32.45%</td>
-        </tr>
-    </table>
-    <a href="#" class="real-time-link">View real time <i class="bi bi-arrow-left"></i></a>
-</div>
-
-
-          <div class="grid3 additional-content">
-            <h2 id="user-traffic-heading">Insights</h2>
-            
-            <p> Increase in user engagement observed on weekends.</p>
-            <p>
-              Insight 2: Campaign X resulted in a significant boost in
-              conversions.
-            </p>
+          <a href="#" class="real-time-link" style="color: #049539"
+            >View real time <i class="bi bi-arrow-left"></i
+          ></a>
+          <div id="userTrafficChartContainer">
+            <canvas id="userTrafficChart"></canvas>
           </div>
+        </div>
+
+        <div class="grid2">
+          <h2 id="user-traffic-heading" style="color: black">Likes</h2>
+          <p
+            style="
+              color: black;
+              padding: 10px;
+              font-weight: bold;
+              font-size: 14px;
+            "
+          >
+            Page Likes by City
+          </p>
+          <table>
+            <tr>
+              <th>City</th>
+              <th>Likes</th>
+              <th>Likes %</th>
+            </tr>
+            <tr>
+              <td>Nairobi</td>
+              <td>1.4K</td>
+              <td>37.33%%</td>
+            </tr>
+            <tr>
+              <td>Kisumu</td>
+              <td>659</td>
+              <td>17.38%</td>
+            </tr>
+            <tr>
+              <td>Kakamega</td>
+              <td>172</td>
+              <td>4.53%</td>
+            </tr>
+            <tr>
+              <td>Mombasa</td>
+              <td>156</td>
+              <td>32.45%</td>
+            </tr>
+            <tr>
+              <td style="color: #3b5fa1">Other</td>
+              <td style="color: #3b5fa1">1.2k</td>
+              <td style="color: #3b5fa1">32.45%</td>
+            </tr>
+          </table>
+          <a href="#" class="real-time-link" style="color: #116793"
+            >View real time <i class="bi bi-arrow-left"></i
+          ></a>
+        </div>
+
+        <div class="grid3 additional-content">
+          <h2 id="user-traffic-heading">Insights</h2>
+
+          <p
+            style="
+              color: black;
+              font-weight: bold;
+              margin: 20px 0 0;
+              padding: 20px;
+            "
+          >
+            AUTOMATED INSIGHT
+          </p>
+          <p style="color: black; margin: 0; font-weight: bold">
+            Perform week-over-week
+          </p>
+          <p style="color: #919191; margin: 0">
+            From the 1st to the 7th of March, 2024
+          </p>
+          <hr style="margin: 10px 0" />
+          <p style="color: black; margin: 0; font-weight: bold">
+            AUTOMATED INSIGHT
+          </p>
+          <p style="color: black; margin: 0; font-weight: bold">
+            Sessions per week were 359% higher than average <br />
+            for the campaign ("referral") from source "adido-digital.co.ke"
+          </p>
+          <p style="color: #919191; margin: 0">
+            From 1st to the 7th of November, 2023
+          </p>
+          <a href="#" class="real-time-link" style="color: #049539"
+            >View real time <i class="bi bi-arrow-left"></i
+          ></a>
         </div>
       </div>
     </main>
+
+    <script>
+      function updatePercentage(malePercentage, femalePercentage) {
+        const maleElement = document.querySelector(".male");
+        const femaleElement = document.querySelector(".female");
+
+        const maleWidth = malePercentage + "%";
+        const femaleWidth = femalePercentage + "%";
+
+        maleElement.textContent = malePercentage + "%";
+        femaleElement.textContent = femalePercentage + "%";
+        maleElement.style.width = maleWidth;
+        femaleElement.style.width = femaleWidth;
+      }
+
+      updatePercentage("60", "40");
+    </script>
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
