--- a/campaings.html
+++ b/campaings.html
@@ -91,10 +91,54 @@
         <h2 class="h2">
           <span> Hey Amina</span> - here's what's happening with your site today
         </h2>
-        <div class="socials">
-          <ul>
-            <li></li>
-          </ul>
+        <div class="socials-container">
+          <div>
+            <p>
+              <img
+                src="icons/tiktok-logo-fill-svgrepo-com.svg"
+                alt=""
+                style="width: 20px"
+              />
+              TikTok
+            </p>
+            <p style="font-weight: bold; font-size: 30px">420K</p>
+            <p>Followers 12%</p>
+          </div>
+
+          <div>
+            <p>
+              <img
+                src="icons/instagram-2016-logo-svgrepo-com.svg"
+                alt=""
+                width="20px"
+              />
+              Instagram
+            </p>
+            <p style="font-weight: bold; font-size: 30px">980K</p>
+            <p style="margin: 5px 0">Followers 12%</p>
+          </div>
+
+          <div>
+            <p>
+              <img
+                src="icons/youtube-icon-logo-svgrepo-com.svg"
+                alt=""
+                width="20px"
+              />
+              Youtube
+            </p>
+            <p style="font-weight: bold; font-size: 30px">230K</p>
+            <p style="margin: 5px 0">Followers 12%</p>
+          </div>
+
+          <div>
+            <p>
+              <img src="icons/twitter-logo-svgrepo-com.svg" alt="" /> TikTok
+            </p>
+
+            <p style="margin: 5px 0">420K</p>
+            <p style="margin: 5px 0">Followers 12%</p>
+          </div>
         </div>
         <div class="followers-container">
           <h1 style="font-size: 1.5em; color: black; padding: 20px">
