--- a/campaings.html
+++ b/campaings.html
@@ -98,37 +98,34 @@
         <p>Key users who talked about this topic</p>
     </div>
     <div>
-        <p>@ntvkenya</p>
+        <p> <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjjH3V1T7dWVBIKJWjYAS1TS2ZQ-jafyBdCw&usqp=CAUs"
+                alt="NTV Kenya Profile Pic"
+                width="40px"
+              />@ntvkenya</p>
         <p>4.6 Followers</p>
     </div>
     <div>
-        <p>@Safaricom _Care</p>
+        <p><img src="https://pbs.twimg.com/profile_images/1321030825991917568/QPnfuezj_400x400.jpg" width="40px" alt="">@Safaricom _Care</p>
         <p>1.8m Followers</p>
     </div>
     <div>
-        <p>@C_NyakundiH</p>
+        <p><img src="https://pbs.twimg.com/profile_images/1701245249794813954/9DnmlOf8_400x400.jpg" width="40px">@C_NyakundiH</p>
         <p>656.6K Followers</p>
     </div>
     <div>
-        <p>@GhettoRadio895</p>
+        <p><img src="https://cdn6.aptoide.com/imgs/c/5/e/c5e5ae810fada3a1eedb750d75b0cf63_icon.png" width="40px" alt="">@GhettoRadio895</p>
         <p>269.0k Followers</p>
     </div>
     <div>
-        <p>@Huwawei</p>
+        <p><img src="https://pub-mediabox-storage.rxweb-prd.com/exhibitor/logo/exh-a231d1be-29b6-401c-a9a4-231d9f699c96/desktop-large/4a20d602-1720-47f2-9e1d-2e44d2227e90.png" width="40px">@Huwawei</p>
         <p>10.7m Followers</p>
     </div>
     <div>
-        <p>@liputan6dotcom</p>
+        <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReM7vE4nd4fZ8JZj7VozI4LBJEG8-KDQ9I6ETi_iSmYy055ViY-bXQTzw7px7cqI6GGZw&usqp=CAU" width="40px" alt="">@liputan6dotcom</p>
         <p>4.6 Followers</p>
     </div>
-    <div>
-        <p>@ntvkenya</p>
-        <p>4.6 Followers</p>
-    </div>
-    <div>
-        <p>@ntvkenya</p>
-        <p>4.6 Followers</p>
-    </div>
+    
 </div>
 
        
