--- a/insights.html
+++ b/insights.html
@@ -16,7 +16,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/output.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
+    <link rel="stylesheet" href="metrics.css" />
   </head>
   <body>
     <!-- Header Section -->
@@ -54,30 +59,36 @@
     </header>
 
     <div class="sidebar">
-      <a class="active" href="dashboard.html"
-        ><i class="bi bi-house-door"></i>Dashboard</a
-      >
+      <img src="Assets/images/SAF-MAIN-LOGO.png" alt="" class="sidebar-image" />
+      <a class="active" href="dashboard.html">
+        <i class="bi bi-house-door"></i>Dashboard
+      </a>
       <h2 class="sidebar-h2">ANALYTICS</h2>
-      <a href="metricts.html"
-        ><img src="Saf Icons/Analysis.svg" alt="" />Metrics</a
-      >
-      <a href="campaings.html"
-        ><img src="Saf Icons/Engagemnet.svg" alt="" />Campaigns</a
-      >
-      <a href="insights.html"
-        ><img src="Saf Icons/Monetisation.svg" alt="" />insights</a
-      >
-      <a href="insights.html"
-        ><img src="Saf Icons/Retention.svg" alt="" />Integration</a
-      >
-      <a href="insights.html"
-        ><img src="Saf Icons/Reports.svg" alt="" />Reports</a
-      >
-      <a href="insights.html"
-        ><img src="Saf Icons/Reports (1).svg" alt="" />competitor Analysis</a
-      >
+      <a href="campaigns.html">
+        <img src="Saf Icons/Engagement.svg" alt="" />Campaigns
+      </a>
+
+      <a href="campaigns.html">
+        <img src="Saf Icons/Engagement.svg" alt="" />Campaigns
+      </a>
+      <a href="insights.html">
+        <img src="Saf Icons/Monetization.svg" alt="" />Insights
+      </a>
+      <a href="integration.html">
+        <img src="Saf Icons/Retention.svg" alt="" />Integration
+      </a>
+      <a href="reports.html">
+        <img src="Saf Icons/Reports.svg" alt="" />Reports
+      </a>
+      <a href="competitor-analysis.html">
+        <img src="Saf Icons/Reports (1).svg" alt="" />Competitor Analysis
+      </a>
       <h2 class="sidebar-h2">USER</h2>
-      <a href=""><img src="Saf Icons/Demographics.svg" alt="" />Demograhics</a>
+      <a href="#">
+        <img src="Saf Icons/Demographics.svg" alt="" />Demographics
+      </a>
     </div>
+
+    <main class="main-content"></main>
   </body>
 </html>
