--- a/metricts.html
+++ b/metricts.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Safaricom Dashboard</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -14,15 +16,23 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
+    <!-- FontAwesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha384-eEXF/XQXtYoFFVsYd63id78t6usqqNhvKG3EAspXvRYXjqknj1+nFpfIDFpLYM/E"
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="metrics.css" />
-    <style>
-      .container {
-        display: flex;
-      }
-    </style>
   </head>
   <body>
+    <!-- Header Section -->
     <header
       style="
         background-color: #fff;
@@ -45,7 +55,9 @@
         </div>
       </div>
       <div class="icons">
-        <i class="bi bi-envelope"><span class="notification-badge">2</span></i>
+        <i class="bi bi-envelope">
+          <span class="notification-badge">2</span>
+        </i>
         <i class="bi bi-bell-fill"></i>
         <img
           src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8ZmVtYWxlJTIwcHJvZmlsZXxlbnwwfHwwfHx8MA%3D%3D"
@@ -54,86 +66,52 @@
       </div>
     </header>
 
-    <div class="container">
-      <div class="sidebar">
-        <a class="active" href="dashboard.html"
-          ><i class="bi bi-house-door"></i>Dashboard</a
-        >
-        <h2 class="sidebar-h2">ANALYTICS</h2>
-        <a href="metricts.html"
-          ><img src="Saf Icons/Analysis.svg" alt="" />Metrics</a
-        >
-        <a href="campaings.html"
-          ><img src="Saf Icons/Engagemnet.svg" alt="" />Campaigns</a
-        >
-        <a href="insights.html"
-          ><img src="Saf Icons/Monetisation.svg" alt="" />insights</a
-        >
-        <a href="insights.html"
-          ><img src="Saf Icons/Retention.svg" alt="" />Integration</a
-        >
-        <a href="insights.html"
-          ><img src="Saf Icons/Reports.svg" alt="" />Reports</a
-        >
-        <a href="insights.html"
-          ><img src="Saf Icons/Reports (1).svg" alt="" />competitor Analysis</a
-        >
-        <h2 class="sidebar-h2">USER</h2>
-        <a href=""
-          ><img src="Saf Icons/Demographics.svg" alt="" />Demographics</a
-        >
-      </div>
-      <div class="content">
-        <h2 class="h2">
-          <span> Hey Amina</span> - here's what's happening with your site today
-        </h2>
-        <div class="graph1">
-          <h3 class="graph1 h3">Website Audience Overview</h3>
-           <p class="graph p">Sessions: 6,909,433 | Session Duration: 433s</p>
-          <canvas id="lineChart" width="400" height="200" class="graph1 canvas"></canvas>
-          <p><span> <strong>Website Report</strong></span> For 7 days, 30 days, 6 months, and 12 months.</p>
+    <div class="sidebar">
+      <img src="Assets/images/SAF-MAIN-LOGO.png" alt="" class="sidebar-image" />
+      <a class="active" href="dashboard.html">
+        <i class="bi bi-house-door"></i>Dashboard
+      </a>
+      <h2 class="sidebar-h2">ANALYTICS</h2>
+      <div class="sec-center">
+        <input class="dropdown" type="checkbox" id="dropdown" name="dropdown" />
+        <img src="Saf Icons/Analysis.svg" alt="" />
+        <label class="for-dropdown" for="dropdown" style="margin-right: 20px">
+          Metrics <i class="bi bi-caret-down-fill"></i>
+        </label>
+
+        <div class="section-dropdown" style="margin-top: 10px">
+          <a href="metrics.html?platform=application"
+            >Application <i class="uil uil-arrow-right"></i
+          ></a>
+          <a href="metrics.html?platform=website"
+            >Website <i class="uil uil-arrow-right"></i
+          ></a>
+          <a href="metrics.html?platform=ussd"
+            >USSD <i class="uil uil-arrow-right"></i
+          ></a>
         </div>
-      
-        
+      </div>
+      <a href="campaings.html">
+        <img src="Saf Icons/Engagemnet.svg" alt="" />Campaigns
+      </a>
+      <a href="insights.html">
+        <img src="Saf Icons/Monetisation.svg" alt="" />Insights
+      </a>
+      <a href="integration.html">
+        <img src="Saf Icons/Retention.svg" alt="" />Integration
+      </a>
+      <a href="reports.html">
+        <img src="Saf Icons/Reports.svg" alt="" />Reports
+      </a>
+      <a href="competitor-analysis.html">
+        <img src="Saf Icons/Reports (1).svg" alt="" />Competitor Analysis
+      </a>
+      <h2 class="sidebar-h2">USER</h2>
+      <a href="#">
+        <img src="Saf Icons/Demographics.svg" alt="" />Demographics
+      </a>
     </div>
-  
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-      var ctxLine = document.getElementById("lineChart").getContext("2d");
-      var lineChart = new Chart(ctxLine, {
-        type: "line",
-        data: {
-          labels: [
-            "02",
-            "03",
-            "04",
-            "05",
-            "06",
-            "07",
-            "08",
-            "09",
-            "10",
-            "11",
-            "12",
-          ],
-          datasets: [
-            {
-              label: "Sessions",
-              data: [820000, 1600000, 2500000, 3300000],
-              borderColor: "rgb(255, 99, 132)",
-              borderWidth: 1,
-              fill: false,
-            },
-          ],
-        },
-        options: {
-          scales: {
-            y: {
-              beginAtZero: true,
-            },
-          },
-        },
-      });
-    </script>
+
+    <main class="main-content"></main>
   </body>
 </html>
